Fix card overflow on the footer at certain heights

--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ main {
 	grid-template-columns: repeat(2, 1fr);
 	margin: 5rem;
 	max-width: 50rem;
-	max-height: 40rem;
+	min-height: 25rem;
 	border-radius: 16px;
 	box-shadow: 0.2rem 0.2rem 2.5rem hsl(180, 2%, 71%);
 }
@@ -85,6 +85,7 @@ h1 {
 	font-weight: var(--fn-rgl-n);
 	color: var(--clr-600);
 	line-height: 1.8;
+	width: clamp(18ch, 22ch 25ch);
 }
 
 .price {
@@ -167,10 +168,6 @@ footer {
 }
 
 @media (max-width: 400px) {
-	.card {
-		height: calc(100vh - 1rem);
-	}
-
 	h1,
 	.price > :nth-child(1) {
 		font-size: 2.5rem;
